--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-html {
+body {
     display: flex;
-    align-items: center;
     justify-content: center;
-    width: fit-content;
+    flex-direction: column;
+    align-items: center;
+
 }
